# distribuidos

./: README.md  install_hooks.sh
.github/: pull_request_template.md
.github/config/: labeler.yaml
.github/hooks/: cargo-checks  pre-commit
.github/workflows/: labeler.yaml  pkg_example_package_pr.yaml  pkg_example_package_push.yaml  pkg_ingress_pr.yaml  pkg_ingress_push.yaml  pkg_sync_pr.yaml  pkg_sync_push.yaml  pkg_tp1_gateway_pr.yaml  pkg_tp1_gateway_push.yaml  pkg_tp1_protocols_pr.yaml  pkg_tp1_protocols_push.yaml  pkg_tp1_utils_pr.yaml  pkg_tp1_utils_push.yaml  pkg_types_pr.yaml  pkg_types_push.yaml  pkg_utils_pr.yaml  pkg_utils_push.yaml  tp0-ci.yaml  tp0-test.yaml  tp1-ci.yaml  tp1_ci.yaml  tp2_ci.yaml
TP0/: .dockerignore  Makefile  README.md  docker-compose-dev.yaml  docker-compose.template.yaml
TP0/docs/: README.original.md
TP0/server/: Cargo.toml  Dockerfile  config.ini  main.py
TP0/server/common/: server.py
TP0/server/config/: default.json
TP0/server/src/: client_handler.rs  config.rs  constants.rs  greeter.rs  lib.rs  main.rs  paths.rs  server.rs
TP0/test/: run.sh
TP1/: .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  docker-compose.yaml
TP1/config/: alarms.json
TP1/scripts/: build.sh  run_for_services.sh
TP1/services/aggregator/: Cargo.toml
TP1/services/aggregator/config/: workers.json
TP1/services/aggregator/src/: lib.rs  main.rs  server.rs  types.rs
TP1/services/aggregator/src/forker/: config.rs  mod.rs
TP1/services/aggregator/src/query_handler/: config.rs  constants.rs  event_reader.rs  mod.rs  types.rs  window.rs
TP1/services/app/: Cargo.toml
TP1/services/app/config/: events.csv  simulated.json
TP1/services/app/src/: lib.rs  main.rs  types.rs
TP1/services/app/src/manual/: constants.rs  mod.rs
TP1/services/app/src/simulated/: constants.rs  mod.rs
TP1/services/client/: Cargo.toml
TP1/services/client/config/: simulated.json
TP1/services/client/src/: constants.rs  lib.rs  main.rs  parse.rs  types.rs
TP1/services/client/src/manual/: constants.rs  messages.rs  mod.rs
TP1/services/client/src/simulated/: config.rs  constants.rs  mod.rs
TP1/services/db_event_writer/: Cargo.toml
TP1/services/db_event_writer/src/: main.rs  server.rs
TP1/services/event_writer/: Cargo.toml
TP1/services/event_writer/config/: ingress.json  workers.json
TP1/services/event_writer/src/: lib.rs  main.rs  server.rs
TP1/services/event_writer/src/write_worker_pool/: config.rs  constants.rs  event_writer.rs  metric_file.rs  mod.rs
TP2/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml
TP2/common/: greeter.py
TP2/config/: common.json  filters.json  ingestion.json  pipeline.json  scale.json
TP2/docker/: Dockerfile
TP2/docs/: tmp_ideas.md
TP2/scripts/: apply.py  build.sh  build_services.sh
TP2/src/: broker.py  client.py
TP3/: .gitignore  Makefile  README.md  docker-compose.yaml
TP3/common/: executor.py  healthcheck_listener.py  utils.py
TP3/config/: client.json  monitor.json  pipeline.json  pipeline_entity.json  scale.json
TP3/data/: README.md
TP3/docs/: secuencia_backup.drawio
TP3/monitor/: Dockerfile  bully_constants.py  bully_executor.py  bully_protocol.py  bully_states.py  constants.py  container_manager.py  control_plane.py  data_plane.py  healthcheck_monitor.py  main.py  messages.py
TP3/scripts/: build.sh  descipher_backup.py  generate_docker_compose.py  generate_services.py  test.py
final/: Examen.md
final/apuntes/: 01 - Introducción.md  01.md  (+11 more)
scripts/: generate_cargo_version.js
(+177 files in other folders)
