[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ctrlc = { version = "3.0", features = ["termination"] }
distribuidos_tp1_gateway = "0.1.7"
distribuidos_tp1_protocols = "1.2.6"
distribuidos_sync = "1.2.0"
distribuidos_types = "0.1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
