[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
distribuidos_tp1_protocols = "1.1.3"
distribuidos_types = "0.1.0"
