[package]
name = "event_writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
distribuidos_ingress = "1.1.12"
distribuidos_sync = "1.1.5"
distribuidos_tp1_protocols = "1.2.3"
distribuidos_tp1_utils = "1.0.2"
distribuidos_types = "0.1.0"
fs2 = "0.4.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
